--- a/AppGestionCegep/AppGestionCegep/MainWindow.xaml
+++ b/AppGestionCegep/AppGestionCegep/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AppGestionCegep"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="1000" Width="1500">
     <Grid>
         <DockPanel>
             <Menu DockPanel.Dock="Top">
@@ -20,32 +20,45 @@
             <TextBox AcceptsReturn="True" />
         </DockPanel>
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="228,10,0,0" Click="Button_Click"/>
-        <TabControl HorizontalAlignment="Left" Height="284" Margin="0,35,0,0" VerticalAlignment="Top" Width="517">
+        <TabControl HorizontalAlignment="Left" Height="924" Margin="0,35,0,0" VerticalAlignment="Top" Width="1482">
             <TabItem Header="Onglet 1">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5" Margin="0,0,-14,-10" >
+                    
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="2*" />
+                            <RowDefinition Height="1*" />
+                            <RowDefinition Height="1*" />
+                        </Grid.RowDefinitions>
+                        <Button>Button 1</Button>
+                        <TextBlock Grid.Column="1">Button 2</TextBlock>
+                        <TextBox Grid.Column="2">Button 3</TextBox>
+                        <Button Grid.Row="1">Button 4</Button>
+                        <Button Grid.Column="1" Grid.Row="1">Button 5</Button>
+                        <Button Grid.Column="2" Grid.Row="1">Button 6</Button>
+                        <Button Grid.Row="2">Button 7</Button>
+                        <Button Grid.Column="1" Grid.Row="2">Button 8</Button>
+                        <Button Grid.Column="2" Grid.Row="2">Button 9</Button>
+                   
+                </Grid>
             </TabItem>
-            <TabItem Header="Onglet 2">
-                <Grid Background="#FFE5E5E5"/>
-                
-                
-                
-                
+            <TabItem Header="Onglet 2" >
+                <Grid Background="#FFE5E5E5">
+                    <ListBox HorizontalAlignment="Left" Height="100" Margin="108,127,0,0" VerticalAlignment="Top" Width="100"/>
+                </Grid>
+
+
             </TabItem>
         </TabControl>
-        <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-            </Grid.RowDefinitions>
+
+
     </Grid>
 
-    
 
-    
+
+
 </Window>
