--- a/AppGestionCegep/AppGestionCegep/MainWindow.xaml
+++ b/AppGestionCegep/AppGestionCegep/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AppGestionCegep"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1000" Width="1500">
-    <Grid>
+        Title="MainWindow" Height="500" Width="500" SizeChanged="Window_SizeChanged"  >
+    <Grid Name="a2">
         <DockPanel>
             <Menu DockPanel.Dock="Top">
                 <MenuItem Header="_File">
@@ -19,35 +19,54 @@
             </Menu>
             <TextBox AcceptsReturn="True" />
         </DockPanel>
+        
+        
+        
+        
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="228,10,0,0" Click="Button_Click"/>
-        <TabControl HorizontalAlignment="Left" Height="924" Margin="0,35,0,0" VerticalAlignment="Top" Width="1482">
+        <TabControl Name="tab1" HorizontalAlignment="Stretch"  Height="424" Margin="0,35,0,0" VerticalAlignment="Top" Width="492">
             <TabItem Header="Onglet 1">
-                <Grid Background="#FFE5E5E5" Margin="0,0,-14,-10" >
-                    
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*" />
-                            <ColumnDefinition Width="1*" />
-                            <ColumnDefinition Width="1*" />
-                        </Grid.ColumnDefinitions>
+                <Grid Background="#C4D7ED"  >
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"  />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Grid Name="gridG" Grid.Column="0" Background="AntiqueWhite" >
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="2*" />
-                            <RowDefinition Height="1*" />
-                            <RowDefinition Height="1*" />
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
                         </Grid.RowDefinitions>
-                        <Button>Button 1</Button>
-                        <TextBlock Grid.Column="1">Button 2</TextBlock>
-                        <TextBox Grid.Column="2">Button 3</TextBox>
-                        <Button Grid.Row="1">Button 4</Button>
-                        <Button Grid.Column="1" Grid.Row="1">Button 5</Button>
-                        <Button Grid.Column="2" Grid.Row="1">Button 6</Button>
-                        <Button Grid.Row="2">Button 7</Button>
-                        <Button Grid.Column="1" Grid.Row="2">Button 8</Button>
-                        <Button Grid.Column="2" Grid.Row="2">Button 9</Button>
-                   
+                    <ComboBox Grid.Row="1" Name="combo1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="190" />
+                    <TextBox Grid.Row="7" Name="champNom" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
+                        <TextBox Grid.Row="3" HorizontalAlignment="Center" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
+                        <TextBox Grid.Row="5" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap"  Text="" VerticalAlignment="Center" Width="120"/>
+                        <Label Grid.Row="0" Content="Type de programme :" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Bottom"/>
+                        <Label Grid.Row="2" Content="Nom du cours :" HorizontalAlignment="Center"  VerticalAlignment="Bottom"/>
+                        <Label Grid.Row="4" Content="Identifiant du cours :" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+                        <Label Grid.Row="6" Content="Heure du cours :" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+                        <Button Grid.Row="9" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75"/>
+
+                    </Grid>
+                    <ListBox Grid.Column="1" HorizontalAlignment="Left" Height="100" Margin="92,91,0,0" VerticalAlignment="Top" Width="100"/>
+
+
+
                 </Grid>
             </TabItem>
             <TabItem Header="Onglet 2" >
-                <Grid Background="#FFE5E5E5">
+                <Grid Background="#FFE5E5E5" Margin="201,144,993,588">
                     <ListBox HorizontalAlignment="Left" Height="100" Margin="108,127,0,0" VerticalAlignment="Top" Width="100"/>
                 </Grid>
 
