--- a/AppGestionCegep/AppGestionCegep/MainWindow.xaml
+++ b/AppGestionCegep/AppGestionCegep/MainWindow.xaml
@@ -19,21 +19,21 @@
             </Menu>
             <TextBox AcceptsReturn="True" />
         </DockPanel>
-        
-        
-        
-        
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="228,10,0,0" Click="Button_Click"/>
+
+
+
+
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="232,19,0,0" Click="Button_Click"/>
         <TabControl Name="tab1" HorizontalAlignment="Stretch"  Height="424" Margin="0,35,0,0" VerticalAlignment="Top" Width="492">
             <TabItem Header="Onglet 1">
                 <Grid Background="#C4D7ED"  >
 
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*"  />
+                        <ColumnDefinition Width="1*" />
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
 
-                    <Grid Name="gridG" Grid.Column="0" Background="AntiqueWhite" >
+                    <Grid Grid.Column="0" Background="AntiqueWhite" >
                         <Grid.RowDefinitions>
                             <RowDefinition Height="1*"/>
                             <RowDefinition Height="1*"/>
@@ -43,23 +43,20 @@
                             <RowDefinition Height="1*"/>
                             <RowDefinition Height="1*"/>
                             <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="2*"/>
                         </Grid.RowDefinitions>
-                    <ComboBox Grid.Row="1" Name="combo1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="190" />
-                    <TextBox Grid.Row="7" Name="champNom" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
-                        <TextBox Grid.Row="3" HorizontalAlignment="Center" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
-                        <TextBox Grid.Row="5" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap"  Text="" VerticalAlignment="Center" Width="120"/>
-                        <Label Grid.Row="0" Content="Type de programme :" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Bottom"/>
-                        <Label Grid.Row="2" Content="Nom du cours :" HorizontalAlignment="Center"  VerticalAlignment="Bottom"/>
-                        <Label Grid.Row="4" Content="Identifiant du cours :" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
-                        <Label Grid.Row="6" Content="Heure du cours :" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
-                        <Button Grid.Row="9" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75"/>
+                        <Label    Grid.Row="0" Content="Type de programme :" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Bottom"/>
+                        <ComboBox Grid.Row="1" Name="combo1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="190" />
+                        <Label    Grid.Row="2" Content="Nom du cours :" HorizontalAlignment="Center"  VerticalAlignment="Bottom"/>
+                        <TextBox  Grid.Row="3" HorizontalAlignment="Center" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
+                        <Label    Grid.Row="4" Content="Identifiant du cours :" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+                        <TextBox  Grid.Row="5" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap"  Text="" VerticalAlignment="Center" Width="120"/>
+                        <Label    Grid.Row="6" Content="Heure du cours :" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+                        <TextBox  Grid.Row="7" Name="champNom" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
+                        <Button   Grid.Row="8" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75"/>
 
                     </Grid>
-                    <ListBox Grid.Column="1" HorizontalAlignment="Left" Height="100" Margin="92,91,0,0" VerticalAlignment="Top" Width="100"/>
+                    <ListBox Name="Liste_cours" Grid.Column="2" HorizontalAlignment="Left" Height="338" Margin="10,10,0,0" VerticalAlignment="Top" Width="221"/>
 
 
 
