Modif Cours.cs MainWindow xaml et cs

--- a/AppGestionCegep/AppGestionCegep/MainWindow.xaml
+++ b/AppGestionCegep/AppGestionCegep/MainWindow.xaml
@@ -5,68 +5,81 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AppGestionCegep"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="500" SizeChanged="Window_SizeChanged"  >
-    <Grid Name="a2">
+        Title="MainWindow" Height="500" Width="600" SizeChanged="Window_SizeChanged" MinHeight="500" MinWidth="400" >
+    <Grid Name="grid1">
         <DockPanel>
             <Menu DockPanel.Dock="Top">
                 <MenuItem Header="_File">
-                    <MenuItem Header="_New"  />
-                    <MenuItem Header="_Open" Click="Button_Click"/>
+                    <MenuItem Header="_New" />
+                    <MenuItem Header="_Open" />
                     <MenuItem Header="_Save" />
                     <Separator />
                     <MenuItem Header="_Exit" />
                 </MenuItem>
             </Menu>
-            <TextBox AcceptsReturn="True" />
-        </DockPanel>
 
-        <TabControl Name="tab1" HorizontalAlignment="Stretch"  Height="424" Margin="0,35,0,0" VerticalAlignment="Top" Width="492">
-            <TabItem Header="Onglet 1">
-                <Grid Background="#C4D7ED"  >
+            <TabControl Name="tab1" >
+                <TabItem Header="Onglet 1">
+                    <Grid Background="#C4D7ED" >
 
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="1*" />
-                    </Grid.ColumnDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"  />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
 
-                    <Grid Grid.Column="0" Background="AntiqueWhite" >
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                        </Grid.RowDefinitions>
-                        <Label    Grid.Row="0" Content="Type de programme :" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Bottom"/>
-                        <ComboBox Grid.Row="1" Name="combo1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="190" />
-                        <Label    Grid.Row="2" Content="Nom du cours :" HorizontalAlignment="Center"  VerticalAlignment="Bottom"/>
-                        <TextBox  Grid.Row="3" HorizontalAlignment="Center" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
-                        <Label    Grid.Row="4" Content="Identifiant du cours :" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
-                        <TextBox  Grid.Row="5" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap"  Text="" VerticalAlignment="Center" Width="120"/>
-                        <Label    Grid.Row="6" Content="Heure du cours :" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
-                        <TextBox  Grid.Row="7" Name="champNom" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
-                        <Button   Grid.Row="8" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75"/>
+                        <Grid Name="gridG" Grid.Column="0" Background="AntiqueWhite" >
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                            </Grid.RowDefinitions>
+                            <ComboBox Grid.Row="1" Name="Type_Box" HorizontalAlignment="Center" VerticalAlignment="Center" Width="190" />
+                            <TextBox Grid.Row="3" Name="Nom_Champ" HorizontalAlignment="Center" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
+                            <TextBox Grid.Row="5" Name="Id_Champ" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap"  Text="" VerticalAlignment="Center" Width="120"/>
+                            <TextBox Grid.Row="7" Name="H_Cours" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" />
+                            <Label Grid.Row="0" Content="Type de programme :" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Bottom"/>
+                            <Label Grid.Row="2" Content="Nom du cours :" HorizontalAlignment="Center"  VerticalAlignment="Bottom"/>
+                            <Label Grid.Row="4" Content="Identifiant du cours :" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+                            <Label Grid.Row="6" Content="Heure du cours :" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+                            <Button Click="Ajouter_Click" Grid.Row="9" Content="Ajouter" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75"/>
+
+                            
+                        </Grid>
+
+                        <Grid Name="gridD" Grid.Column="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="10*"/>
+                                <RowDefinition Height="1*"/>
+                            </Grid.RowDefinitions>
+
+                            <ListBox Name="List_Box" Grid.Column="1" Margin="40,40,40,40"/>
+                            
+                        </Grid>
+                        
+
+
 
                     </Grid>
-                    <ListBox Name="Liste_cours" Grid.Column="2" HorizontalAlignment="Left" Height="338" Margin="10,10,0,0" VerticalAlignment="Top" Width="221"/>
+                </TabItem>
+                <TabItem Header="Onglet 2" >
+                    <Grid Background="#FFE5E5E5" Margin="201,144,993,588">
+                        <ListBox HorizontalAlignment="Left" Height="100" Margin="108,127,0,0" VerticalAlignment="Top" Width="100"/>
+                    </Grid>
 
 
+                </TabItem>
+            </TabControl>
+        </DockPanel>
 
-                </Grid>
-            </TabItem>
-            
-            <TabItem Header="Onglet 2" >
-                <Grid Background="#FFE5E5E5" Margin="201,144,993,588">
-                    <ListBox HorizontalAlignment="Left" Height="100" Margin="108,127,0,0" VerticalAlignment="Top" Width="100"/>
-                </Grid>
-
-
-            </TabItem>
-        </TabControl>
 
 
     </Grid>
