--- a/AppGestionCegep/AppGestionCegep/MainWindow.xaml
+++ b/AppGestionCegep/AppGestionCegep/MainWindow.xaml
@@ -12,7 +12,7 @@
                 <MenuItem Header="_File">
                     <MenuItem Header="_New" />
                     <MenuItem Header="_Open" />
-                    <MenuItem Header="_Save" />
+                    <MenuItem Header="_Save" Click="Save_Click" />
                     <Separator />
                     <MenuItem Header="_Exit" />
                 </MenuItem>
@@ -42,7 +42,10 @@
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
                             </Grid.RowDefinitions>
-                            <ComboBox Grid.Row="1" Name="Type_Box" HorizontalAlignment="Center" VerticalAlignment="Center" Width="190" />
+                            <ComboBox Grid.Row="1" Name="Type_Box" HorizontalAlignment="Center" VerticalAlignment="Center" Width="190">
+                                <ComboBoxItem Content="ok"></ComboBoxItem>
+                            </ComboBox>
+
                             <TextBox Grid.Row="3" Name="Nom_Champ" HorizontalAlignment="Center" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
                             <TextBox Grid.Row="5" Name="Id_Champ" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap"  Text="" VerticalAlignment="Center" Width="120"/>
                             <TextBox Grid.Row="7" Name="H_Cours" HorizontalAlignment="Center" Height="23" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" />
